bug 672384 - WebSocket connection drops on moderately-large fragmented messages r=biesi